objects/ApplicationReview.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_External_Id__c</fullName>
        <label>Application External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Title_Review__c</fullName>
        <formula>Application.ApplicationName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Delegance__c</fullName>
        <label>Due Diligence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program</referenceTo>
        <relationshipLabel>Application Reviews</relationshipLabel>
        <relationshipName>Application_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemOutcome__c</fullName>
        <label>SystemOutcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>System_Color__c</fullName>
        <label>System Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>green</fullName>
                </value>
                <value>
                    <fullName>orange</fullName>
                </value>
                <value>
                    <fullName>red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>Private</sharingModel>
</CustomObject>